<resources>
    <string name="app_name">茂职校园网</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">首页</string>
    <string name="entry">立即体验</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tags_nick_name">用户昵称</string>

    <string name="tags_age">18岁</string>
    <string name="tags_edu">研究生</string>
    <string name="tags_like_buy">母婴产品</string>
    <string name="tags_like_movie">影视达人</string>
    <string name="tags_like_game">体育竞速</string>
    <string name="tags_unknown">未知</string>
    <string name="action_upgrade">版本号</string>
    <string name="action_about">关于APP</string>
    <string name="et_name">请输入学号</string>
    <string name="et_password">请输入密码</string>
    <string name="et_vertify">验证码</string>
    <string name="btn_login">登 陆</string>
    <string name="xuenian">学年</string>
    <string name="xueqi">学期</string>
    <string name="className">课程名称</string>
    <string name="score">成绩</string>
    <string name="me">我</string>
    <string name="isSave">保存账号密码</string>
    <string name="login_error">登录异常，请稍后再试</string>
    <string name="network_error">网络异常</string>
    <string name="loading">正在登录...</string>
    <string name="login">登录</string>
    <string name="et_username_hint">请输入学号</string>
    <string name="et_lib_username_hint">请输入图书馆账号(默认是身份证号码)</string>
    <string name="et_lib_password_hint">请输入图书馆账号密码(默认是身份证号码)</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_verificationCode_hint">请输入验证码</string>
    <string name="news">校园资讯</string>
    <string name="days">时间</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="course">课程表</string>
    <string name="library">图书馆</string>
    <string name="search">搜索</string>
    <string name="searchHint">请输入关键字</string>
    <string name="book_isbn">分类号</string>
    <string name="book_name">书名</string>
    <string name="book_author">作者</string>
    <string name="grade">成绩查询</string>
    <string name="changePassword">修改密码</string>
    <string name="isChanging">正在修改</string>
    <string name="passwordNotNull">密码不能为空</string>
    <string name="query">查询</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="year">学年</string>
    <string name="semester">学期</string>
    <string name="ok">确定</string>
    <string name="aboutMe">开发单位: 正方软件股份有限公司</string>
    <string name="level_grade">等级考试</string>
    <string name="course_detail">课程详情</string>
    <string name="book_detail">图书详情</string>
</resources>
